# consilium

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/consilium/: __init__.py  __main__.py  core.py  model_registry.py  providers.py  sdk.py
tests/: test_model_discovery_live.py  test_model_registry.py
