[project]
name = "consilium"
version = "0.1.0"
description = "Multi-LLM council for consensus-driven AI responses"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Richard Abrich", email = "richard@openadapt.ai" },
]
keywords = ["llm", "ai", "council", "multi-model", "consensus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]

[project.scripts]
consilium = "consilium.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consilium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: integration tests that require real API keys (deselect with '-m \"not live\"')",
]

[project.urls]
Homepage = "https://github.com/OpenAdaptAI/openadapt-consilium"
Repository = "https://github.com/OpenAdaptAI/openadapt-consilium"
"Bug Tracker" = "https://github.com/OpenAdaptAI/openadapt-consilium/issues"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/consilium/__init__.py:__version__"]
commit_message = "chore: release {version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
